# lc3-vm-rust

./: Cargo.toml  Makefile  README.md
src/: cpu.rs  flags.rs  main.rs  memory.rs  opcode.rs
