[package]
name = "lc3-vm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
termios = "0.3.3"
thiserror = "2.0.3"

[lints.rust]
unsafe_code = "forbid"
warnings = "warn"


[lints.clippy]
panic = "deny"
unnecessary_cast = "warn"
deref_by_slicing = "warn"
indexing_slicing = "warn"
manual_unwrap_or = "warn"
manual_unwrap_or_default = "warn"
as_conversions = "deny"
unwrap_used = "deny"
expect_used = "deny"

arithmetic_side_effects = "deny"
overflow_check_conditional = "warn"
manual_saturating_arithmetic = "warn"
